# goat-guardian

./: .travis.yml  ChangeLog.md  Makefile  README.md  goat-guardian.cabal  stack.yaml
app/: Main.hs
example-servant-app/: .gitignore  README.md  example-servant-app.cabal
example-servant-app/app/: Main.hs
example-servant-app/src/: Lib.hs  Types.hs
img/: README.md  goat-guardian-network-with-db.xml
src/: GoatGuardian.hs
src/GoatGuardian/: CmdLineOpts.hs  Password.hs  Types.hs
