name:                goat-guardian
version:             0.1.0.0
synopsis:            reverse proxy authentication server
description:         Goat Guardian is a reverse proxy server (like nginx) that handles authentication for your app.
homepage:            http://github.com/arow-oss/goat-guardian
license:             MIT
license-file:        LICENSE
author:              ARoW Co., Ltd.
maintainer:          arow.okamoto+github@gmail.com
copyright:           2018 ARoW Co., Ltd.
category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GoatGuardian
                     , GoatGuardian.CmdLineOpts
                     , GoatGuardian.Password
                     , GoatGuardian.Types
  build-depends:       base >= 4.7 && < 5
                     , authenticate-oauth
                     , base64-bytestring
                     , bytestring
                     , clientsession
                     , cookie
                     , email-validate
                     , envy
                     , exceptions
                     , http-api-data
                     , http-client
                     , http-conduit
                     , http-reverse-proxy
                     , http-types
                     , mtl
                     , optparse-applicative
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , random
                     , scrypt
                     , text
                     , time
                     , tonatona
                     , tonatona-db-sqlite
                     , tonatona-email-sendmail
                     , tonatona-logger
                     , twitter-conduit
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
  default-extensions:  DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , ViewPatterns

executable goat-guardian
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , goat-guardian
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -fwarn-monomorphism-restriction
  default-language:    Haskell2010
  default-extensions:  DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , OverloadedStrings
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , ViewPatterns

test-suite goat-guardian-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , goat-guardian
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
  default-language:    Haskell2010

test-suite goat-guardian-doctest
  type:                exitcode-stdio-1.0
  main-is:             DocTest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , doctest
                     , Glob
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/arow-oss/goat-guardian
