name:                example-servant-app
version:             0.1.0.0
synopsis:            example application that works with Goat Guardian
description:         An example application that runs behind Goat Guardian.
homepage:            http://github.com/arow-oss/goat-guardian
license:             MIT
license-file:        LICENSE
author:              ARoW Co., Ltd.
maintainer:          arow.okamoto+github@gmail.com
copyright:           2018 ARoW Co., Ltd.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , blaze-html
                     , bytestring
                     , http-api-data
                     , http-client
                     , http-conduit
                     , http-reverse-proxy
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , monad-logger
                     , mtl
                     , servant
                     , servant-blaze
                     , servant-server
                     , text
                     , tonatona
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
  default-extensions:  DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , ViewPatterns

executable example-servant-app
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , example-servant-app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -fwarn-monomorphism-restriction
  default-language:    Haskell2010
  default-extensions:  DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , OverloadedStrings
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , ViewPatterns

source-repository head
  type:     git
  location: https://github.com/arow-oss/goat-guardian
